<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View"/>

        <import type="com.example.rosty.githubusers.presentation.details.DetailsViewModel.State"/>

        <variable
            name="id"
            type="String"/>

        <variable
            name="vm"
            type="com.example.rosty.githubusers.presentation.details.DetailsViewModel"/>
    </data>

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_white">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/bar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_header"
            android:elevation="@dimen/elevation_content"
            android:background="@color/transparent"
            android:fitsSystemWindows="true">

            <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:contentScrim="?attr/colorPrimary"
                app:collapsedTitleTextAppearance="@style/CollapsedAppBar"
                app:expandedTitleTextAppearance="@style/ExpandedAppBar"
                app:expandedTitleMarginBottom="@dimen/margin"
                app:expandedTitleMarginEnd="@dimen/margin"
                app:expandedTitleMarginStart="16dp"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <ImageView
                    android:id="@+id/header"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fitsSystemWindows="true"
                    android:scaleType="centerCrop"
                    android:background="@color/background_gray"
                    android:imageUrl="@{vm.user.avatarUrl}"
                    app:layout_collapseMode="parallax"/>

                <View android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:background="@drawable/bg_header"
                      android:fitsSystemWindows="true"
                      app:layout_collapseMode="parallax"/>

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="pin"
                    android:title="@{vm.user.login}"
                    app:titleTextColor="@android:color/white"
                    app:subtitleTextColor="@android:color/white"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                    android:theme="@style/Toolbar"/>

            </android.support.design.widget.CollapsingToolbarLayout>

        </android.support.design.widget.AppBarLayout>

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="match_parent"
                          android:orientation="vertical"
                          android:paddingTop="@dimen/space_content"
                          android:animateLayoutChanges="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:orientation="horizontal"
                    android:gravity="center_vertical">

                    <TextView
                            style="@style/TextAppearance.AppCompat.Button"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/margin"
                            android:layout_weight="1"
                            android:ellipsize="end"
                            android:maxLines="1"
                            android:text="@string/title_profile"/>

                    <ProgressBar
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_marginEnd="@dimen/margin"
                        android:visibility="@{vm.state != State.LOAD ? View.GONE : View.VISIBLE}"/>

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/transparent"
                        android:text="@string/action_retry"
                        android:textColor="@color/colorAccent"
                        android:onClick="@{v -> vm.loadUser(id)}"
                        android:visibility="@{vm.state == State.ERROR ? View.VISIBLE : View.GONE}"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/margin"
                    android:paddingEnd="@dimen/margin"
                    android:visibility="@{vm.state != State.RESULT  ? View.GONE : View.VISIBLE}">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_followers"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{vm.user.followersCount}"
                        android:background="@drawable/bg_indicator"
                        android:layout_marginStart="@dimen/space_content"
                        android:layout_marginEnd="@dimen/space_content"
                        android:paddingStart="@dimen/space_content"
                        android:paddingEnd="@dimen/space_content"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_following"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{vm.user.followingCount}"
                        android:background="@drawable/bg_indicator"
                        android:layout_marginStart="@dimen/space_content"
                        android:layout_marginEnd="@dimen/space_content"
                        android:paddingStart="@dimen/space_content"
                        android:paddingEnd="@dimen/space_content"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/margin"
                    android:paddingEnd="@dimen/margin"
                    android:layout_marginTop="@dimen/space_content"
                    android:visibility="@{vm.state != State.RESULT ? View.GONE : View.VISIBLE}">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_public_repos"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{vm.user.reposCount}"
                        android:background="@drawable/bg_indicator"
                        android:layout_marginStart="@dimen/space_content"
                        android:layout_marginEnd="@dimen/space_content"
                        android:paddingStart="@dimen/space_content"
                        android:paddingEnd="@dimen/space_content"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_public_gists"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{vm.user.gistsCount}"
                        android:background="@drawable/bg_indicator"
                        android:layout_marginStart="@dimen/space_content"
                        android:layout_marginEnd="@dimen/space_content"
                        android:paddingStart="@dimen/space_content"
                        android:paddingEnd="@dimen/space_content"/>

                </LinearLayout>

                <TextView
                    style="@style/TextAppearance.AppCompat.Small"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin"
                    android:text="@{vm.user.bio == null || vm.user.bio.isEmpty ? @string/text_no_bio : vm.user.bio}"
                    android:visibility="@{vm.state != State.RESULT ? View.GONE : View.VISIBLE}"/>

                <TextView
                    style="@style/TextAppearance.AppCompat.Small"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin"
                    android:layout_marginEnd="@dimen/margin"
                    android:layout_marginStart="@dimen/margin"
                    android:text="@string/text_loading_error"
                    android:visibility="@{vm.state != State.ERROR ? View.GONE : View.VISIBLE}"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/divider"
                    android:background="@color/background_gray"/>

                <TextView
                    android:id="@+id/view_original"
                    android:tag="@{vm.user.url}"
                    style="@style/TextAppearance.AppCompat.Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/margin"
                    android:background="?attr/selectableItemBackground"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textColor="@color/colorAccent"
                    android:text="@string/action_original"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/divider"
                    android:background="@color/background_gray"/>

            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>

    </android.support.design.widget.CoordinatorLayout>

</layout>